--- a/DanyBot/properties/mapper.properties
+++ b/DanyBot/properties/mapper.properties
@@ -3,3 +3,4 @@ installed-ram: Total Physical Memory:
 available-ram: Available Physical Memory:
 wifi-interface-name: Name
 network-interface-wifi: Microsoft Hosted Network Virtual Adapter
+wifi-hardware-off: Hardware Off
